Fix small input sizes on small screens

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ select:focus {
 input[type='text'],
 input[type='email'],
 input[type='number'] {
-  width: 50%;
+  width: 75%;
   border: none;
   padding: 0.8em 1.2em;
   margin: 8px 0;
@@ -167,5 +167,11 @@ input[type='submit']:hover {
 @media (min-width: 576px) {
   form {
     margin: 36px auto;
+  }
+
+  input[type='text'],
+  input[type='email'],
+  input[type='number'] {
+    width: 50%;
   }
 }
